--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "apisauce": "^2.1.1",
     "expo": "^41.0.0",
     "expo-constants": "~10.1.3",
+    "expo-font": "~9.1.0",
     "expo-image-picker": "~10.1.4",
+    "expo-linear-gradient": "~9.1.0",
     "expo-location": "~12.0.4",
     "expo-media-library": "~12.0.2",
     "expo-permissions": "~12.0.1",
@@ -32,9 +35,7 @@
     "react-native-svg": "12.1.0",
     "react-native-web": "~0.13.12",
     "react-native-wheel-picker-android": "^2.0.6",
-    "yup": "^0.32.9",
-    "expo-linear-gradient": "~9.1.0",
-    "expo-font": "~9.1.0"
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
