--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
-    "react-native-calendars": "^1.1262.0",
+    "react-native-calendars": "https://github.com/infothien/react-native-calendars.git#custom_text_day_based_on_day_name_index",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
